--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -12,22 +12,22 @@
   <div class="tab-pane fade in active" id="profile" role="tabpanel">
 
     <h4 style="margin-top: 30px; margin-bottom: 20px;">Personal Information</h4>
-    <form class="form-inline">
+    <!-- <form class="form-inline"> -->
       <%= @user.errors.full_messages.join(", ") %>
       <%= form_for @user do |f| %>
-      <div class="form-group form-margins2">
+      <div class="form-margins2">
         <%= f.text_field :first_name, placeholder: "First name", class: "login-input-field login-input-form" %>
       </div>
-      <div class="form-group form-margins2">
+      <div class="form-margins2">
         <%= f.text_field :last_name, placeholder: "Last name", class: "login-input-field login-input-form" %>
       </div>
-      <div class="form-group form-margins2">
+      <div class="form-margins2">
         <%= f.email_field :email, placeholder: "Email", class: "login-input-field login-input-form" %>
       </div>
-      <div class="form-group form-margins2">
+      <div class="form-margins2">
         <%= f.password_field :password, placeholder: "Password",class: "login-input-field login-input-form" %>
       </div>
-    </form>
+    <!-- </form> -->
     <div class="form-margins1">
       <%= f.text_field :telephone, placeholder: "Telephone", class: "login-input-field login-input-form" %>
     </div>
@@ -37,42 +37,43 @@
     </div>
 
     <h4 style="margin-top: 30px; margin-bottom: 20px;">Address</h4>
-    <form class="form-inline">
-      <div class="form-group form-margins3">
+    <!-- <form class="form-inline"> -->
+      <div class="form-margins3">
         <%= f.text_field :apartment_number, placeholder: "Apartment number", class: "login-input-field login-input-form" %>
       </div>
-      <div class="form-group form-margins3">
+      <div class="form-margins3">
         <%= f.text_field :street_number, placeholder: "Street number",class: "login-input-field login-input-form" %>
       </div>
-      <div class="form-group form-margins3">
+      <div class="form-margins3">
         <%= f.text_field :street, placeholder: "Street", class: "login-input-field login-input-form" %>
       </div>
-    </form>
+    <!-- </form> -->
 
-    <form class="form-inline">
-      <div class="form-group form-margins3">
+    <!-- <form class="form-inline"> -->
+      <div class="form-margins3">
         <%= f.text_field :city, placeholder: "City", class: "login-input-field login-input-form" %>
       </div>
-      <div class="form-group form-margins3">
+      <div class="form-margins3">
         <%= f.text_field :state, placeholder: "State", class: "login-input-field login-input-form" %>
       </div>
-      <div class="form-group form-margins3">
+      <div class="form-margins3">
         <%= f.text_field :country, placeholder: "Country", class: "login-input-field login-input-form" %>
       </div>
-    </form>
+    <!-- </form> -->
 
     <h4 style="margin-top: 30px; margin-bottom: 20px;">Shop Information</h4>
 
-    <div class="form-group form-margins1">
+    <div class="form-margins1">
       <%= f.text_field :shop_name, placeholder: "Shop name", class: "login-input-field login-input-form" %>
     </div>
-    <div class="form-group form-margins1">
+    <div class="form-margins1">
       <%= f.text_field :description, placeholder: "Description", class: "login-input-field login-input-form" %>
     </div>
     <div style="margin: 10px;">
-      <%= f.submit "Edit account", class: "btn-primary buy-btn" %>
+      <%= f.submit "Edit account", class: "buy-btn" %>
     </div>
     <% end %>
+  <!-- </form> -->
   </div>
 
   <div class="tab-pane fade in" id="add_menu_item" role="tabpanel">
